# high-shift-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/ecs_benchmark/: CMakeLists.txt
examples/ecs_benchmark/src/: idset_iterator_vs_lambda.cpp
examples/learnopengl/: CMakeLists.txt
examples/learnopengl/include/: shader.h
examples/learnopengl/src/: shader.cpp
examples/lighting/: CMakeLists.txt
examples/lighting/shaders/: cube.frag  cube.vert  lighting.vert
examples/lighting/src/: main.cpp
examples/model_loading/: CMakeLists.txt
examples/model_loading/include/: texture.h
examples/model_loading/shaders/: cube.frag  cube.vert
examples/model_loading/src/: main.cpp  texture.cpp
examples/nikita-ecs-testing/: CMakeLists.txt
examples/nikita-ecs-testing/include/: shader.h  texture.h
examples/nikita-ecs-testing/shaders/: cube.vert
examples/nikita-ecs-testing/src/: main.cpp  shader.cpp  texture.cpp
include/: camera.h  shader.h  texture.h
include/common/: HashMap.h  demangler.h  handle_manager.h
include/ecs/: archetype.h  chunk.h  chunk_layout.h  chunks_data.h  chunks_map.h  component.h  delta_time.h  dispatcher.h  ecs.h  entities.h  entity.h  game_loop_control.h  id_set.h  join.h  storage.h  system.h  utils.h  world.h
include/ecs/detail/: dispatcher_impl.h  entities_impl.h  id_set_impl.h  join_impl.h
include/ecs/storages/: inverted_storage.h  sparse_vec_storage.h  storages.h  vec_storage.h
include/ecs/storages/detail/: inverted_storage_impl.h  sparse_vec_storage_impl.h  vec_storage_impl.h
include/input/: input.h  input_system.h  key_code.h
include/render/: lights.h  model_loader.h  render_system.h  shader.h  shader_loader.h  shader_storage.h  texture_loader.h  window_system.h
include/render/detail/: shader_storage_impl.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/other/: doctest.h
lib/stb_image/: CMakeLists.txt
lib/tl/: expected.h
src/: camera.cpp  main.cpp  shader.cpp  texture.cpp
src/common/: demangler.cpp
src/ecs/: archetype.cpp  chunk_layout.cpp  dispatcher.cpp  entities.cpp
src/input/: input_system.cpp
src/render/: model_loader.cpp  render_system.cpp  shader.cpp  shader_loader.cpp  texture_loader.cpp  window_data.h  window_system.cpp
test/ecs/: some_components.h  test_archetype.cpp  test_chunk_layout.cpp  test_chunks_data.cpp  test_component.cpp  test_dispatcher.cpp  test_entities.cpp  test_id_set.cpp  test_join.cpp  test_system.cpp  test_world.cpp
test/ecs/storages/: test_inverted_storage.cpp  test_shader_storage.cpp  test_sparse_storage.cpp  test_vec_storage.cpp
test/render/: test_render_system.cpp  test_renderer_storage.cpp
